Hexen II: Hammer of Thyrion

Development Progress	:
---------------------------

2013-03-02 (SVN):
    * view.c, cl_main.c: zero the cl.cshifts array from CL_Disconnect()
      instead of from V_UpdatePalette() every frame when not connected.
      copy the rev.5144 behavior, of calling V_CalcPowerupCshift() only
      when connected, to the opengl version.
    * update version date stamp to 2013-03-02.

2013-03-01 (SVN):
    * added opus libs and headers under oslibs for windows and macosx.
      added snd_opus.c to Xcode and Visual Studio project files. (it is
      still not enabled, however just adding USE_CODEC_OPUS among the
      preprocessor macros and adding libopusfile among the link libs is
      enough to do it.)

2013-02-28 (SVN):
    * snd_opus.c: add comments for clarification on Opus decoded sample
      rate. add comments about the sample width returned by op_read()
      and remove two useless macros.
    * updated version date stamp to 2013-02-28.

2013-02-27 (SVN):
    * codecs: add support for the Opus file decoding, which works just
      fine. it is not enabled by default, but editing the Makefile for
      USE_CODEC_OPUS will do it.

2013-02-27 (SVN):
    * codecs: rename CODECTYPE_OGG to CODECTYPE_VORBIS, because ogg is
      just the container. adjust all other sources and headers for it.
    * snd_vorbis.c: reject files with more than one streams. (maybe we
      add section change handling in the future, but not supported now.)

2013-02-27 (SVN):
    * docs/README: small updates.

2013-02-27 (SVN):
    * view.c (V_UpdatePalette): call V_CalcPowerupCshift() only when
      fully connected to the server, otherwise zero the cl.cshifts
      array. this clears the left-over colors from area contents or
      used powerup items in software renderer. opengl renderer is not
      affected, because it does not actually touch the palette.
    * updated version date stamp to 2013-02-27.

2013-02-27 (SVN):