@@ -268,6 +268,10 @@ static void Host_Changelevel_f (void)
 		return;
 	}
 
+	q_snprintf (level, sizeof(level), "maps/%s.bsp", Cmd_Argv(1));
+	if (!FS_FileExists(level, NULL))
+		Host_Error ("%s: cannot find map %s", __thisfunc__, level);
+
 	q_strlcpy (level, Cmd_Argv(1), sizeof(level));
 	if (Cmd_Argc() == 2)
 		startspot = NULL;
@@ -279,6 +283,8 @@ static void Host_Changelevel_f (void)
 
 	SV_SaveSpawnparms ();
 	SV_SpawnServer (level, startspot);
+	if (!sv.active)
+		Host_Error ("%s: cannot run map %s", __thisfunc__, level);
 }
 
 /*
@@ -305,6 +311,10 @@ static void Host_Changelevel2_f (void)
 		return;
 	}
 
+	q_snprintf (level, sizeof(level), "maps/%s.bsp", Cmd_Argv(1));
+	if (!FS_FileExists(level, NULL))
+		Host_Error ("%s: cannot find map %s", __thisfunc__, level);
+
 	q_strlcpy (level, Cmd_Argv(1), sizeof(level));
 	if (Cmd_Argc() == 2)
 		startspot = NULL;
@@ -325,8 +335,9 @@ static void Host_Changelevel2_f (void)
 	if (LoadGamestate(level, startspot, 0) != 0)
 	{
 		SV_SpawnServer (level, startspot);
-		if (sv.active)
-			RestoreClients (0);
+		if (!sv.active)
+			Host_Error ("%s: cannot run map %s", __thisfunc__, level);
+		RestoreClients (0);
 	}
 }
 
@@ -351,8 +362,7 @@ static void Host_Restart_f (void)
 		return;
 	}
 
-	q_strlcpy (mapname, sv.name, sizeof(mapname));	// must copy out, because it gets cleared
-								// in sv_spawnserver
+	q_strlcpy (mapname, sv.name, sizeof(mapname));	// mapname gets cleared in spawnserver
 	q_strlcpy (startspot, sv.startspot, sizeof(startspot));
 
 	if (Cmd_Argc() == 2 && q_strcasecmp(Cmd_Argv(1),"restore") == 0)
@@ -360,13 +370,16 @@ static void Host_Restart_f (void)
 		if (LoadGamestate(mapname, startspot, 3) != 0)
 		{
 			SV_SpawnServer (mapname, startspot);
-			if (sv.active)
-				RestoreClients (0);
+			if (!sv.active)
+				Host_Error ("%s: cannot restart map %s", mapname, __thisfunc__);
+			RestoreClients (0);
 		}
 	}
 	else
 	{
 		SV_SpawnServer (mapname, startspot);
+		if (!sv.active)
+			Host_Error ("%s: cannot restart map %s", mapname, __thisfunc__);
 	}
 }
 
@@ -428,10 +441,9 @@ Host_Savegame_f
 static void Host_Savegame_f (void)
 {
 	FILE	*f;
-	int		i;
+	int		i, error_state;
 	char		comment[SAVEGAME_COMMENT_LENGTH+1];
 	const char	*p;
-	int		error_state = 0;
 
 	if (cmd_source != src_command)
 		return;
@@ -586,12 +598,11 @@ static void Host_Loadgame_f (void)
 	float		playtime;
 	char		str[32768];
 	int		version;
-	int		i;
+	int		i, error_state;
 	int		tempi;
 	float		tempf;
 	edict_t		*ent;
 	float		spawn_parms[NUM_SPAWN_PARMS];
-	int		error_state = 0;
 
 	if (cmd_source != src_command)
 		return;
@@ -714,11 +725,10 @@ static void Host_Loadgame_f (void)
 int SaveGamestate (qboolean ClientsOnly)
 {
 	FILE	*f;
-	int		i;
 	edict_t		*ent;
+	int		i, error_state;
 	int		start, end;
 	char		comment[SAVEGAME_COMMENT_LENGTH+1];
-	int		error_state = 0;
 
 	if (ClientsOnly)
 	{
